syntax = "proto3";

package proto.chat.v1;

import "google/protobuf/timestamp.proto";

service Chat {
	rpc Login(LoginRequest) returns (LoginResponse) {}
  	rpc MessageStream(stream StreamRequest) returns (stream StreamResponse) {}
}

message LoginRequest {
	string username = 1;
}
message LoginResponse {
	string token = 1;
}

message StreamRequest {
	string message = 1;
	string id = 2;
}
message StreamResponse {
	google.protobuf.Timestamp timestamp = 1;
	oneof event {
		Online client_online = 2;
		Offline client_offline = 3;
		Message client_message = 4;
		Shutdown server_shutdown = 5;
	}
	message Online {
		string username = 1;
	}
	message Offline {
		string username = 1;
	}
	message Message {
		string username = 1;
		string message = 2;
		string id = 3;
	}
	message Shutdown {}
}
